<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:id="@+id/view_top"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:background="@drawable/wave_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/icon" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/hurry"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:text="@string/hunger_don_t_wait"
            android:textColor="@color/black"
            android:textSize="20dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_top"
        app:layout_constraintVertical_bias="0.217"
        tools:layout_editor_absoluteX="0dp"
        android:background="@drawable/button_bg"
        android:text="@string/get_started"
        android:gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_big"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/continue_without_login"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start"
        app:layout_constraintVertical_bias="0.104"
        tools:layout_editor_absoluteX="24dp" />

    <TextView
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_big"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/already_a_member_login"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_btn"
        app:layout_constraintVertical_bias="0.104"
        tools:layout_editor_absoluteX="24dp" />


</androidx.constraintlayout.widget.ConstraintLayout>